# dbmigrations-sqlite

./: dbmigrations-sqlite.cabal  test.db
programs/: MooSQLite.hs
test/: TestDriver.hs
