Name:                dbmigrations-sqlite
Version:             2.0.0
Synopsis:            The moo executable for SQLite to work with dbmigrations
Description:         This package contains the executable to work with
                     the dbmigrations package when the database backend
                     is SQLite. See the package dbmigrations for details
                     about the dbmigrations project in general.

                     This particular package only supports SQLite.
                     There are other similar packages for other
                     databases, for example for MySQL and SQLite.

                     To get started, see the 'README.md'
                     (https://github.com/jtdaugherty/dbmigrations/blob/master/README.md)
                     and 'MOO.TXT'
                     (https://raw.githubusercontent.com/jtdaugherty/dbmigrations/master/MOO.TXT)
                     files included in the dbmigrations package and to
                     the usage output for the 'moo-sqlite' command.

                     The executable in this package works exactly the
                     same (as described in the dbmigrations package),
                     with only two differences:
                     * The executable this package provides is called
                       'moo-sqlite' instead of 'moo'.
                     * The executable in this package only supports SQLite.
                       Consequently, you do not need to specify the
                       database type via DBM_DATABASE_TYPE.

Category:            Database
Author:              Jonathan Daugherty <cygnus@foobox.com>
Maintainer:          Jonathan Daugherty <cygnus@foobox.com>
Build-Type:          Simple
License:             BSD3
License-File:        LICENSE
Cabal-Version:       >= 1.10

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/dbmigrations-sqlite.git

Executable moo-sqlite
  default-language: Haskell2010
  Build-Depends:
    base >= 4 && < 5,
    dbmigrations >= 2,
    HDBC-sqlite3

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  Hs-Source-Dirs:  programs
  Main-is:         MooSQLite.hs

test-suite dbmigrations-sqlite-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  Build-Depends:
    base >= 4 && < 5,
    dbmigrations >= 2,
    HDBC >= 2.2.1,
    HDBC-sqlite3 == 2.3.3.1,
    HUnit >= 1.2

  other-modules:
    BackendTest
    TestDriver

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind -Wwarn
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  Hs-Source-Dirs:  test
  Main-is:         TestDriver.hs
